Get bincodec working in test browser.

--- a/test/client.html
+++ b/test/client.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Test Client</title>
+    <script src="bodec.js" charset="utf-8"></script>
+    <script src="bincodec.js" charset="utf-8"></script>
     <script src="client.js" charset="utf-8"></script>
   </head>
 </html>
