--- a/test/client.html
+++ b/test/client.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Test Client</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <p>Loading...</p>
